# opengl-cookbook

./: .gitignore  CMakeLists.txt  generate_opengl.py
src/: Window.cpp  Window.h  main.cpp
